# src/_generated/api-types/DetailedRecipeDto.ts
@@ -1,38 +1,0 @@
-/**
- * Generated by Kubb (https://kubb.dev/).
- * Do not edit manually.
- */
-
-import { z } from 'zod/v4'
-
-import { CategoryDto } from './CategoryDto'
-import { ImageDto } from './ImageDto'
-import { Ingredient } from './Ingredient'
-import { Instruction } from './Instruction'
-
-export const DetailedRecipeDto = z.object({
-  id: z.string(),
-  createdAt: z.iso.datetime({ local: true }),
-  userFullname: z.string(),
-  title: z.string(),
-  headline: z.string(),
-  preparationTime: z.int(),
-  cookTime: z.int(),
-  get categories() {
-    return z.array(CategoryDto)
-  },
-  mealType: z.string(),
-  averageRating: z.number(),
-  likes: z.int(),
-  get image() {
-    return ImageDto
-  },
-  get instructions() {
-    return z.array(Instruction)
-  },
-  get ingredients() {
-    return z.array(Ingredient)
-  },
-})
-
-export type DetailedRecipeDto = z.infer<typeof DetailedRecipeDto>
