# src/_generated/api-types/GetAllImages.ts
@@ -1,0 +1,19 @@
+/**
+ * Generated by Kubb (https://kubb.dev/).
+ * Do not edit manually.
+ */
+
+import { z } from 'zod/v4'
+
+import { ImageDto } from './ImageDto'
+
+/**
+ * @description OK
+ */
+export const GetAllImages200 = z.array(ImageDto)
+
+export type GetAllImages200 = z.infer<typeof GetAllImages200>
+
+export const GetAllImagesQueryResponse = GetAllImages200
+
+export type GetAllImagesQueryResponse = z.infer<typeof GetAllImagesQueryResponse>
