# src/_generated/api-types/GetFeedbackDashboardList.ts
@@ -1,0 +1,29 @@
+/**
+ * Generated by Kubb (https://kubb.dev/).
+ * Do not edit manually.
+ */
+
+import { z } from 'zod/v4'
+
+import { PageResponseAdminFeedbackDto } from './PageResponseAdminFeedbackDto'
+
+export const GetFeedbackDashboardListQueryParams = z
+  .object({
+    page: z.coerce.number().int().optional(),
+    size: z.coerce.number().int().optional(),
+    slowdown: z.coerce.number().int().optional(),
+  })
+  .optional()
+
+export type GetFeedbackDashboardListQueryParams = z.infer<typeof GetFeedbackDashboardListQueryParams>
+
+/**
+ * @description OK
+ */
+export const GetFeedbackDashboardList200 = PageResponseAdminFeedbackDto
+
+export type GetFeedbackDashboardList200 = z.infer<typeof GetFeedbackDashboardList200>
+
+export const GetFeedbackDashboardListQueryResponse = GetFeedbackDashboardList200
+
+export type GetFeedbackDashboardListQueryResponse = z.infer<typeof GetFeedbackDashboardListQueryResponse>
