# src/_generated/api-types/GetRecipe.ts
@@ -1,0 +1,25 @@
+/**
+ * Generated by Kubb (https://kubb.dev/).
+ * Do not edit manually.
+ */
+
+import { z } from 'zod/v4'
+
+import { AdminRecipeDto } from './AdminRecipeDto'
+
+export const GetRecipePathParams = z.object({
+  recipeId: z.coerce.number().int(),
+})
+
+export type GetRecipePathParams = z.infer<typeof GetRecipePathParams>
+
+/**
+ * @description OK
+ */
+export const GetRecipe200 = AdminRecipeDto
+
+export type GetRecipe200 = z.infer<typeof GetRecipe200>
+
+export const GetRecipeQueryResponse = GetRecipe200
+
+export type GetRecipeQueryResponse = z.infer<typeof GetRecipeQueryResponse>
