# src/_generated/api-types/Instruction.ts
@@ -1,13 +1,0 @@
-/**
- * Generated by Kubb (https://kubb.dev/).
- * Do not edit manually.
- */
-
-import { z } from 'zod/v4'
-
-export const Instruction = z.object({
-  orderNo: z.int().optional(),
-  description: z.string().optional(),
-})
-
-export type Instruction = z.infer<typeof Instruction>
