# src/_generated/api-types/PageResponseAdminFeedbackDto.ts
@@ -1,0 +1,21 @@
+/**
+ * Generated by Kubb (https://kubb.dev/).
+ * Do not edit manually.
+ */
+
+import { z } from 'zod/v4'
+
+import { AdminFeedbackDto } from './AdminFeedbackDto'
+
+export const PageResponseAdminFeedbackDto = z.object({
+  get content() {
+    return z.array(AdminFeedbackDto)
+  },
+  hasNext: z.boolean(),
+  hasPrevious: z.boolean(),
+  meta: z.string().optional(),
+  pageNumber: z.int(),
+  totalPages: z.int(),
+})
+
+export type PageResponseAdminFeedbackDto = z.infer<typeof PageResponseAdminFeedbackDto>
