# src/_generated/api-types/RecipeRequest.ts
@@ -1,0 +1,27 @@
+/**
+ * Generated by Kubb (https://kubb.dev/).
+ * Do not edit manually.
+ */
+
+import { z } from 'zod/v4'
+
+import { IngredientRequest } from './IngredientRequest'
+import { InstructionRequest } from './InstructionRequest'
+
+export const RecipeRequest = z.object({
+  categoryIds: z.array(z.string()),
+  cookTime: z.int().optional(),
+  headline: z.string(),
+  imageId: z.string(),
+  get ingredients() {
+    return z.array(IngredientRequest)
+  },
+  get instructions() {
+    return z.array(InstructionRequest)
+  },
+  mealTypeId: z.string(),
+  preparationTime: z.int().optional(),
+  title: z.string(),
+})
+
+export type RecipeRequest = z.infer<typeof RecipeRequest>
