# src/_generated/api-types/SetFeedbackApprovalStatus.ts
@@ -1,0 +1,38 @@
+/**
+ * Generated by Kubb (https://kubb.dev/).
+ * Do not edit manually.
+ */
+
+import { z } from 'zod/v4'
+
+import { SetFeedbackApprovalStatusRequest } from './SetFeedbackApprovalStatusRequest'
+import { SetFeedbackApprovalStatusResponse } from './SetFeedbackApprovalStatusResponse'
+
+export const SetFeedbackApprovalStatusPathParams = z.object({
+  feedbackId: z.coerce.number().int(),
+})
+
+export type SetFeedbackApprovalStatusPathParams = z.infer<typeof SetFeedbackApprovalStatusPathParams>
+
+export const SetFeedbackApprovalStatusQueryParams = z
+  .object({
+    slowdown: z.coerce.number().int().optional(),
+  })
+  .optional()
+
+export type SetFeedbackApprovalStatusQueryParams = z.infer<typeof SetFeedbackApprovalStatusQueryParams>
+
+/**
+ * @description OK
+ */
+export const SetFeedbackApprovalStatus200 = SetFeedbackApprovalStatusResponse
+
+export type SetFeedbackApprovalStatus200 = z.infer<typeof SetFeedbackApprovalStatus200>
+
+export const SetFeedbackApprovalStatusMutationRequest = SetFeedbackApprovalStatusRequest
+
+export type SetFeedbackApprovalStatusMutationRequest = z.infer<typeof SetFeedbackApprovalStatusMutationRequest>
+
+export const SetFeedbackApprovalStatusMutationResponse = SetFeedbackApprovalStatus200
+
+export type SetFeedbackApprovalStatusMutationResponse = z.infer<typeof SetFeedbackApprovalStatusMutationResponse>
