# src/_generated/api-types/SetFeedbackApprovalStatusResponse.ts
@@ -1,0 +1,16 @@
+/**
+ * Generated by Kubb (https://kubb.dev/).
+ * Do not edit manually.
+ */
+
+import { z } from 'zod/v4'
+
+import { ApprovalStatus } from './ApprovalStatus'
+
+export const SetFeedbackApprovalStatusResponse = z.object({
+  get approvalStatus() {
+    return ApprovalStatus
+  },
+})
+
+export type SetFeedbackApprovalStatusResponse = z.infer<typeof SetFeedbackApprovalStatusResponse>
