# src/_generated/api-types/UpdateRecipe.ts
@@ -1,0 +1,30 @@
+/**
+ * Generated by Kubb (https://kubb.dev/).
+ * Do not edit manually.
+ */
+
+import { z } from 'zod/v4'
+
+import { AdminRecipeDto } from './AdminRecipeDto'
+import { RecipeRequest } from './RecipeRequest'
+
+export const UpdateRecipePathParams = z.object({
+  recipeId: z.string(),
+})
+
+export type UpdateRecipePathParams = z.infer<typeof UpdateRecipePathParams>
+
+/**
+ * @description OK
+ */
+export const UpdateRecipe200 = AdminRecipeDto
+
+export type UpdateRecipe200 = z.infer<typeof UpdateRecipe200>
+
+export const UpdateRecipeMutationRequest = RecipeRequest
+
+export type UpdateRecipeMutationRequest = z.infer<typeof UpdateRecipeMutationRequest>
+
+export const UpdateRecipeMutationResponse = UpdateRecipe200
+
+export type UpdateRecipeMutationResponse = z.infer<typeof UpdateRecipeMutationResponse>
